# thefuck-rs

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark_comparison.sh
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
scripts/: generate_charts.py
src/: config.rs  corrector.rs  error.rs  executor.rs  lib.rs  main.rs  types.rs  ui.rs  user_rules.rs
src/rules/: cargo_no_command.rs  cat_dir.rs  cd_mkdir.rs  cd_parent.rs  chmod_x.rs  cp_omitting_directory.rs  git_add.rs  git_not_command.rs  git_push.rs  git_stash.rs  ls_la.rs  man_no_space.rs  mkdir_p.rs  mod.rs  no_command.rs  open.rs  python_command.rs  rm_dir.rs  sudo.rs  touch.rs
src/shell/: bash.rs  detect.rs  fish.rs  mod.rs  output.rs  zsh.rs
